<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mrs. America</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan">Scan ticket</string>
    <string name="result">Result</string>
    <string name="home">Home</string>
    <string name="scaning">Scaning...</string>
    <string name="name">Name:</string>
    <string name="seat">Seat:</string>
    <string name="type">Type:</string>
    <string name="invalid">Already validated</string>

</resources>
