<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_blue"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:background="@drawable/ticket"
         >

    <TextView
        android:id="@+id/ticket_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/scan"
        android:textColor="@color/gri"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:text="@string/name"
        android:textColor="@color/gri"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="20dp"
        android:textStyle="bold"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp" />
    
<!--     <TextView -->
<!--         android:id="@+id/text2" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_marginTop="10dp" -->
<!--         android:paddingLeft="5dp" -->
<!--         android:text="@string/seat" -->
<!--         android:textColor="@color/gri" -->
<!--         android:textSize="20sp" /> -->
    
<!--     <TextView -->
<!--         android:id="@+id/tv_seat" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_marginTop="5dp" -->
<!--         android:paddingLeft="10dp" -->
<!--         android:textStyle="bold" -->
<!--         android:text="A38" -->
<!--         android:textColor="@color/black" -->
<!--         android:textSize="20sp" /> -->
    
        <TextView
        android:id="@+id/text3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:text="@string/type"
        android:textColor="@color/gri"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/tv_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="20dp"
        android:textStyle="bold"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/tv_invalid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/invalid"
        android:textColor="@color/purple"
        android:textSize="25sp" />
    
    </LinearLayout>
    
    <Button
        android:id="@+id/validate_btn"
        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/validate_button"
         android:layout_gravity="center|bottom"
         android:gravity="center"
         android:paddingRight="30dp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:paddingBottom="5dp"
         android:layout_marginTop="5dp"
         android:textSize="30sp" />

    <Button
        android:id="@+id/home_btn"
        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/home_btn"
         android:layout_gravity="center|bottom"
         android:gravity="center"
         android:paddingRight="30dp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:paddingBottom="5dp"
         android:layout_marginTop="5dp"
         android:textSize="30sp" />
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_small"
        android:layout_gravity="left"
        android:layout_marginRight="-20dp"
        android:contentDescription="@string/hello_world"/>

</LinearLayout>
